add image files, youtube player api 화면 꽉 채우도록 구현 완료

--- a/app/src/main/res/layout/activity_coupon_shop.xml
+++ b/app/src/main/res/layout/activity_coupon_shop.xml
@@ -29,6 +29,7 @@
         />
 
         <RelativeLayout
+                android:id="@+id/coupon_x_btn"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
