--- a/app/src/main/res/layout/activity_kb_sign.xml
+++ b/app/src/main/res/layout/activity_kb_sign.xml
@@ -14,7 +14,7 @@
             android:layout_height="wrap_content">
 
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/kbSignImage"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
@@ -44,6 +44,7 @@
             android:layout_marginRight="35dp"
             android:textSize="13sp"
             android:layout_marginTop="54dp"
+            android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
@@ -59,7 +60,10 @@
             android:layout_marginLeft="35dp"
             android:layout_marginRight="35dp"
             android:layout_marginTop="20dp"
+            android:inputType="textWebPassword"
+            android:password="true"
             android:layout_width="match_parent"
+            android:textColor="@android:color/black"
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
             android:layout_height="40dp"
@@ -75,6 +79,7 @@
             android:layout_marginRight="35dp"
             android:textSize="13sp"
             android:layout_marginTop="20dp"
+            android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
