--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -18,14 +18,13 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:background="@android:color/transparent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/live_vp">
+            android:layout_height="match_parent">
 
         <com.pierfrancescosoffritti.androidyoutubeplayer.player.YouTubePlayerView
 
                 android:layout_width="match_parent"
                 android:id="@+id/live_youtube_plyer_view"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
         />
 
 
