--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="52.5dp"
             android:layout_marginHorizontal="36dp"
+            android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
@@ -50,6 +51,7 @@
             android:layout_marginTop="20dp"
             android:id="@+id/loginPw"
             android:hint="패스워드"
+            android:inputType="textEmailAddress"
             android:paddingLeft="12.5dp"
             android:layout_marginHorizontal="36dp"
             android:fontFamily="@font/nanumsquareregular"
