--- a/app/src/main/res/layout/activity_coupon_coffee.xml
+++ b/app/src/main/res/layout/activity_coupon_coffee.xml
@@ -28,6 +28,7 @@
         />
 
         <RelativeLayout
+                android:id="@+id/coupon_coffee_x_btn"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
