--- a/app/src/main/res/layout/activity_quiz_review.xml
+++ b/app/src/main/res/layout/activity_quiz_review.xml
@@ -15,7 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/white"
-            android:elevation="10dp">
+            android:elevation="1dp">
 
         <RelativeLayout
                 android:id="@+id/quiz_review_back_btn"
@@ -48,24 +48,83 @@
 
     </RelativeLayout>
 
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"
-            android:layout_marginTop="28dp"
-            android:textColor="#757575"
-            android:lineSpacingExtra="2sp"
-            android:text="2018.11.08"
-            android:layout_marginLeft="36dp"
-            android:fontFamily="@font/nanumsquarebold"
-            android:includeFontPadding="false"
-    />
-
-
-    <android.support.v7.widget.RecyclerView
-            android:layout_marginTop="16dp"
-            android:id="@+id/quizReviewRv"
+    <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/quizReviewTextFirst"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:layout_marginTop="28dp"
+                    android:textColor="#757575"
+                    android:lineSpacingExtra="2sp"
+                    android:text="2018.11.08"
+                    android:layout_marginLeft="36dp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:includeFontPadding="false"
+            />
+
+
+            <android.support.v7.widget.RecyclerView
+                    android:layout_marginTop="16dp"
+                    android:id="@+id/quizReviewRvOne"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/quizReviewTextSecond"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:layout_marginTop="29.2dp"
+                    android:textColor="#757575"
+                    android:lineSpacingExtra="2sp"
+                    android:text="2018.11.08"
+                    android:layout_marginLeft="36dp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:includeFontPadding="false"
+            />
+
+
+            <android.support.v7.widget.RecyclerView
+                    android:layout_marginTop="18dp"
+                    android:id="@+id/quizReviewRvTwo"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/quizReviewTextThird"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:layout_marginTop="29.2dp"
+                    android:textColor="#757575"
+                    android:lineSpacingExtra="2sp"
+                    android:text="2018.11.08"
+                    android:layout_marginLeft="36dp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:includeFontPadding="false"
+            />
+
+
+            <android.support.v7.widget.RecyclerView
+                    android:layout_marginTop="18dp"
+                    android:id="@+id/quizReviewRvThree"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
+
+    </ScrollView>
+
+
+
 </LinearLayout>
