--- a/app/src/main/res/layout/activity_stock_and_fund.xml
+++ b/app/src/main/res/layout/activity_stock_and_fund.xml
@@ -22,7 +22,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:background="@android:color/white"
-                    android:elevation="2dp">
+                    android:elevation="1dp">
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -93,7 +93,7 @@
                         android:layout_below="@+id/stockTextTwo"
                         android:layout_marginTop="-10dp"
                         android:layout_width="match_parent"
-                        android:background="@android:color/darker_gray"
+                        android:background="@drawable/stock_illust_img"
                         android:layout_height="183dp"/>
 
 
