--- a/app/src/main/res/layout/activity_survey_complete_pop_up.xml
+++ b/app/src/main/res/layout/activity_survey_complete_pop_up.xml
@@ -6,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
-        tools:context=".SurveyCompletePopUpActivity">
+        tools:context=".view.popup.SurveyCompletePopUpActivity">
 
     <RelativeLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
