--- a/app/src/main/res/layout/custom_play_button.xml
+++ b/app/src/main/res/layout/custom_play_button.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
+
         android:layout_height="match_parent" >
 
     <View
@@ -11,7 +12,7 @@
             android:clickable="true"
             android:focusable="true"
             android:background="@android:color/black" />
-
+<!--
     <TextView
             android:id="@+id/text_text1"
             android:layout_width="wrap_content"
@@ -20,7 +21,7 @@
             android:textSize="20sp"
             android:textColor="@android:color/white"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true" />-->
 
     <ProgressBar
             android:id="@+id/progressbar"
@@ -44,28 +45,27 @@
             android:id="@+id/video_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:text="ssss"
             android:textColor="@color/red"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true" />
 
     <RelativeLayout
             android:id="@+id/play_pause_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="Play/Pause"
-            android:background="@color/mainColor"
+            android:background="#00000000"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true" >
+            android:layout_alignParentEnd="true" />
 
 
-    </RelativeLayout>
 
     <Button
             android:id="@+id/enter_exit_fullscreen_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Enter/exit fullscreen"
+            android:text="quiz popup button"
 
             android:layout_centerVertical="true"
             android:layout_alignParentStart="true" />
