--- a/app/src/main/res/layout/fragment_coupon_home.xml
+++ b/app/src/main/res/layout/fragment_coupon_home.xml
@@ -57,8 +57,9 @@
                 <ImageView
                         android:layout_marginTop="-10dp"
                         android:layout_below="@+id/coupon_text_two"
-                        android:src="@drawable/couponshop_img"
+                        android:src="@drawable/couponshop_illust_img"
                         android:layout_width="wrap_content"
+                        android:layout_centerHorizontal="true"
                         android:layout_height="183dp"/>
             </RelativeLayout>
 
