--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,6 @@
         <item name="android:windowActionBarOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">false</item>
-        <item name="android:backgroundDimEnabled">true</item>"
+        <item name="android:backgroundDimEnabled">true</item>
     </style>
 </resources>
