뷰 수정하는 작업중

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -57,6 +57,7 @@
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
             android:paddingRight="20dp"
+            android:password="true"
             android:textSize="13sp"
             android:layout_width="match_parent"
             android:layout_height="42dp"
