--- a/app/src/main/res/layout/sliding_layout.xml
+++ b/app/src/main/res/layout/sliding_layout.xml
@@ -67,6 +67,7 @@
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
                             <TextView
+                                    android:id="@+id/home_nick"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:textSize="19sp"
