--- a/app/src/main/res/layout/fragment_home_step_two.xml
+++ b/app/src/main/res/layout/fragment_home_step_two.xml
@@ -112,6 +112,7 @@
             />
 
             <TextView
+                    android:id="@+id/home_step_two_level_text"
                     android:layout_gravity="left"
                     android:fontFamily="@font/nanumsquareregular"
                     android:includeFontPadding="false"
@@ -121,7 +122,7 @@
                     android:textSize="16sp"
                     android:textColor="#707070"
                     android:lineSpacingExtra="2sp"
-                    android:text="Lv. 1"
+
             />
 
         </LinearLayout>
