--- a/app/src/main/res/layout/custom_play_button.xml
+++ b/app/src/main/res/layout/custom_play_button.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
 
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
     <View
             android:id="@+id/panel"
@@ -11,26 +11,61 @@
             android:layout_height="match_parent"
             android:clickable="true"
             android:focusable="true"
-            android:background="@android:color/black" />
-<!--
-    <TextView
-            android:id="@+id/text_text1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="custom UI example"
-            android:textSize="20sp"
-            android:textColor="@android:color/white"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true" />-->
+            android:background="@android:color/black"/>
+    <!--
+        <TextView
+                android:id="@+id/text_text1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="custom UI example"
+                android:textSize="20sp"
+                android:textColor="@android:color/white"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true" />-->
 
     <ProgressBar
             android:id="@+id/progressbar"
+            android:visibility="gone"
             style="?android:attr/progressBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"/>
+
+    <RelativeLayout
+            android:id="@+id/live_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="56dp">
+
+        <ImageView
+                android:id="@+id/live_person_img"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/live_person"/>
+
+        <TextView
+                android:layout_toRightOf="@+id/live_person_img"
+                android:layout_marginLeft="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:textSize="13sp"
+                android:textColor="#ffffff"
+                android:lineSpacingExtra="12sp"
+                android:text="530,340"
+        />
+
+        <ImageView
+                android:id="@+id/live_x_btn"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/live_x_btn"/>
+    </RelativeLayout>
 
     <TextView
             android:id="@+id/video_current_time"
@@ -39,16 +74,16 @@
 
             android:textColor="@color/red"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"/>
 
-    <TextView
-            android:id="@+id/video_duration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="ssss"
-            android:textColor="@color/red"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true" />
+    <!--    <TextView
+                android:id="@+id/video_duration"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ssss"
+                android:textColor="@color/red"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true" />-->
 
     <RelativeLayout
             android:id="@+id/play_pause_button"
@@ -57,17 +92,17 @@
             android:text="Play/Pause"
             android:background="#00000000"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"/>
 
 
+    <!--
+        <Button
+                android:id="@+id/enter_exit_fullscreen_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="quiz popup button"
 
-    <Button
-            android:id="@+id/enter_exit_fullscreen_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="quiz popup button"
-
-            android:layout_centerVertical="true"
-            android:layout_alignParentStart="true" />
+                android:layout_centerVertical="true"
+                android:layout_alignParentStart="true" />-->
 
 </RelativeLayout>
