--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -1,10 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".view.check.CheckActivity">
+        tools:context=".view.check.CheckActivity"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+>
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/white"
+            android:elevation="1dp">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="#3d3d3d"
+                android:lineSpacingExtra="7sp"
+                android:text="출석 체크"
+                android:layout_centerInParent="true"
+                android:fontFamily="@font/nanumsquarebold"
+                android:includeFontPadding="false"
+        />
+
+        <RelativeLayout
+                android:id="@+id/check_x_btn"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:gravity="center_vertical"
+                android:layout_height="match_parent">
+
+
+            <ImageView
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/navi_left_arrow_btn"/>
+        </RelativeLayout>
+
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+            android:layout_marginTop="36dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <ImageView
+                android:id="@+id/check_attendance_image"
+                android:layout_marginLeft="40dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/mypage_attendance_icon"/>
+
+        <LinearLayout
+                android:layout_toRightOf="@+id/check_attendance_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="36dp"
+                android:orientation="vertical">
+
+            <LinearLayout
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="19sp"
+                        android:textColor="#3d3d3d"
+                        android:lineSpacingExtra="3sp"
+                        android:fontFamily="@font/nanumsquarebold"
+                        android:includeFontPadding="false"
+                        android:text="돌무너"
+                />
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/nanumsquareregular"
+                        android:includeFontPadding="false"
+                        android:textSize="14sp"
+                        android:textColor="#3d3d3d"
+                        android:lineSpacingExtra="2sp"
+                        android:text="님"
+                />
+
+            </LinearLayout>
+
+            <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="13sp"
+                    android:textColor="#707070"
+                    android:lineSpacingExtra="1sp"
+                    android:fontFamily="@font/nanumsquareregular"
+                    android:includeFontPadding="false"
+                    android:text="출석 체크 하셨나요? :)"
+            />
+
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
+    <LinearLayout
+            android:layout_marginTop="36dp"
+            android:layout_marginHorizontal="36dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <ImageView
+                android:layout_width="12dp"
+                android:layout_height="13dp"
+                android:src="@drawable/attendance_today_icon"/>
+
+        <TextView
+                android:layout_marginLeft="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:textColor="#cecece"
+                android:lineSpacingExtra="75sp"
+                android:text="오늘"
+                android:fontFamily="@font/nanumsquarelight"
+                android:includeFontPadding="false"
+        />
+
+        <ImageView
+                android:layout_marginLeft="12dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/attendance_today_icon"
+        />
+
+        <TextView
+                android:layout_marginLeft="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="10sp"
+                android:textColor="#cecece"
+                android:lineSpacingExtra="75sp"
+                android:text="출석 완료"
+                android:fontFamily="@font/nanumsquarelight"
+                android:includeFontPadding="false"
+        />
+
+
+    </LinearLayout>
+
+
+    <ImageView
+            android:id="@+id/check_calendar_image"
+            android:layout_marginTop="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/calendar"/>
+
+    <RelativeLayout
+            android:id="@+id/check_okay_btn"
+            android:layout_marginTop="36dp"
+            android:layout_width="match_parent"
+            android:layout_height="46dp"
+            android:layout_marginHorizontal="105dp"
+            android:background="@drawable/border_show_detail_btn_background">
+
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:textColor="#ffffff"
+                android:lineSpacingExtra="2sp"
+                android:text="출석 체크하기"
+                android:layout_centerInParent="true"
+                android:fontFamily="@font/nanumsquareextrabold"
+                android:includeFontPadding="false"
+        />
+
+    </RelativeLayout>
+
+</LinearLayout>
