--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -10,6 +10,7 @@
         android:orientation="vertical">
 
     <RelativeLayout
+            android:id="@+id/live_toolbar_layout"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize">
 
