--- a/app/src/main/res/layout/activity_live_exit_pop_up.xml
+++ b/app/src/main/res/layout/activity_live_exit_pop_up.xml
@@ -4,7 +4,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
-        android:orientation="vertical"
 >
 
 
@@ -49,76 +48,68 @@
         <RelativeLayout
                 android:id="@+id/dialog_view"
                 android:layout_width="match_parent"
-                android:layout_marginHorizontal="28dp"
+                android:layout_marginHorizontal="36dp"
                 android:layout_below="@+id/dialog_icons"
                 android:background="@drawable/border_sliding_layout_background"
-                android:layout_height="210dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
 
-            <RelativeLayout
-                    android:id="@+id/survey_dialog_x_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_alignParentRight="true">
-                <ImageView
-                        android:id="@+id/survey_dialog_x_iv"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/mypage_x_btn"
-                android:layout_margin="8dp"/>
-            </RelativeLayout>
-
-
-            <ImageView
-                    android:id="@+id/one_title"
-                    android:layout_centerHorizontal="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/survey_popup_icon"
-                    android:layout_marginTop="21dp"/>
 
             <TextView
-                    android:layout_below="@+id/one_title"
+                    android:id="@+id/one_title"
                     android:layout_centerHorizontal="true"
-                    android:id="@+id/two_title"
-                    android:layout_marginTop="18.5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:fontFamily="@font/nanumsquareextrabold"
                     android:includeFontPadding="false"
+                    android:layout_marginTop="30dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textSize="20sp"
                     android:textColor="#fdbd37"
                     android:lineSpacingExtra="3sp"
-                    android:text="설문이 도착했어요!"
+                    android:text="중간에 나가시면 안돼요!"
             />
 
             <TextView
-                    android:layout_below="@+id/two_title"
+                    android:layout_marginTop="13dp"
+                    android:id="@+id/two_title"
+                    android:layout_below="@+id/one_title"
                     android:layout_centerHorizontal="true"
-                    android:id="@+id/three_title"
-                    android:layout_marginTop="8dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="12sp"
                     android:textColor="#c7c7c7"
-                    android:lineSpacingExtra="1sp"
+                    android:lineSpacingExtra="6sp"
                     android:fontFamily="@font/nanumsquareregular"
                     android:includeFontPadding="false"
-                    android:text="설문에 참여하면 포인트리를 얻을 수 있어요."
+                    android:gravity="center_horizontal"
+                    android:text="지금 퀴즈를 종료하면 "
+            />
+
+            <TextView
+                    android:id="@+id/three_title"
+                    android:layout_marginTop="5dp"
+                    android:layout_below="@+id/two_title"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="#c7c7c7"
+                    android:lineSpacingExtra="6sp"
+                    android:fontFamily="@font/nanumsquareregular"
+                    android:includeFontPadding="false"
+                    android:gravity="center_horizontal"
+                    android:text="우승상금을 받을 수 없어요. "
             />
 
 
+
             <RelativeLayout
-                    android:id="@+id/goToSurveyBtn"
+                    android:id="@+id/goToOngoingBtn"
                     android:layout_below="@+id/three_title"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
-                    android:layout_marginHorizontal="85dp"
+                    android:layout_marginHorizontal="78dp"
                     android:layout_marginTop="17dp"
                     android:background="@drawable/border_show_detail_btn_background">
                 <TextView
@@ -127,7 +118,7 @@
                         android:textSize="16dp"
                         android:textColor="#ffffff"
                         android:lineSpacingExtra="2sp"
-                        android:text="설문하기"
+                        android:text="계속 진행하기"
                         android:layout_centerInParent="true"
                         android:fontFamily="@font/nanumsquareextrabold"
                         android:includeFontPadding="false"
@@ -135,7 +126,27 @@
             </RelativeLayout>
 
 
-
+            <RelativeLayout
+                    android:id="@+id/goToExitBtn"
+                    android:layout_below="@+id/goToOngoingBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_marginHorizontal="78dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/border_exit_button">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="16dp"
+                        android:textColor="#ffffff"
+                        android:lineSpacingExtra="2sp"
+                       android:text="나가기"
+                        android:layout_centerInParent="true"
+                        android:fontFamily="@font/nanumsquareextrabold"
+                        android:includeFontPadding="false"
+                />
+            </RelativeLayout>
 
         </RelativeLayout>
     </RelativeLayout>
