--- a/app/src/main/res/layout/custom_play_button.xml
+++ b/app/src/main/res/layout/custom_play_button.xml
@@ -86,6 +86,7 @@
                 android:layout_alignParentEnd="true" />-->
 
     <RelativeLayout
+            android:layout_below="@+id/live_toolbar"
             android:id="@+id/play_pause_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
