--- a/app/src/main/res/layout/item_quiz_review.xml
+++ b/app/src/main/res/layout/item_quiz_review.xml
@@ -47,7 +47,7 @@
                 android:textSize="15sp"
                 android:textColor="#414141"
                 android:lineSpacingExtra="8sp"
-                android:text="Q. 주식 거래 정규 마감 시간은?"
+                android:text="-"
         />
 
         <RelativeLayout
@@ -70,7 +70,7 @@
                     android:fontFamily="@font/nanumsquareregular"
                     android:includeFontPadding="false"
                     android:lineSpacingExtra="10sp"
-                    android:text="PM 15:00"
+                    android:text="-"
             />
 
 
@@ -96,13 +96,14 @@
                     android:fontFamily="@font/nanumsquareregular"
                     android:includeFontPadding="false"
                     android:lineSpacingExtra="10sp"
-                    android:text="PM 15:00"
+                    android:text="-"
             />
 
 
         </RelativeLayout>
 
         <RelativeLayout
+                android:id="@+id/quiz_answer_three"
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="7dp"
                 android:layout_below="@+id/quiz_answer_two"
@@ -123,7 +124,7 @@
                     android:fontFamily="@font/nanumsquareregular"
                     android:includeFontPadding="false"
                     android:lineSpacingExtra="10sp"
-                    android:text="PM 15:00"
+                    android:text="-"
             />
 
 
@@ -180,6 +181,7 @@
         </RelativeLayout>
 
         <TextView
+                android:id="@+id/quiz_answer_content_text"
                 android:layout_marginTop="15dp"
                 android:fontFamily="@font/nanumsquareregular"
                 android:includeFontPadding="false"
