Quiz Activity에서 3문제 풀고 나면 3초 뒤에 3문제를 풀었다는 팝업 액티비티 뜨게 성공 ViewPager 라디오 아이템 갯수만큼 높이 줄어들도록 구현 완료. youtube 동영상 코드 받아오는 통신 연결

--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -29,7 +29,7 @@
         />
 
         <RelativeLayout
-                android:id="@+id/check_x_btn"
+                android:id="@+id/check_back_btn"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
@@ -178,6 +178,7 @@
             android:background="@drawable/border_show_detail_btn_background">
 
         <TextView
+                android:id="@+id/check_btn_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
