--- a/app/src/main/res/layout/activity_live_finish_pop_up.xml
+++ b/app/src/main/res/layout/activity_live_finish_pop_up.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent" android:layout_height="match_parent"
         android:background="@android:color/transparent"
 
 >
 
 
-    <RelativeLayout android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true">
+    <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="70dp">
+
         <RelativeLayout
                 android:id="@+id/dialog_icons"
                 android:layout_width="match_parent"
@@ -46,98 +48,88 @@
                     android:src="@drawable/attendance_character_lavender"/>
         </RelativeLayout>
 
-        <RelativeLayout
+        <LinearLayout
                 android:id="@+id/dialog_view"
                 android:layout_width="match_parent"
-                android:layout_marginHorizontal="28dp"
+                android:layout_marginHorizontal="36dp"
                 android:layout_below="@+id/dialog_icons"
                 android:background="@drawable/border_sliding_layout_background"
-                android:layout_height="210dp"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
                 android:orientation="vertical">
 
-
-            <RelativeLayout
-                    android:id="@+id/survey_dialog_x_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_alignParentRight="true">
-                <ImageView
-                        android:id="@+id/survey_dialog_x_iv"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginRight="8dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/mypage_x_btn"
-                android:layout_margin="8dp"/>
-            </RelativeLayout>
-
-
-            <ImageView
-                    android:id="@+id/one_title"
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/live_finish_image"
                     android:layout_centerHorizontal="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/survey_popup_icon"
-                    android:layout_marginTop="21dp"/>
+                    android:layout_marginTop="45dp"
+                    app:civ_border_color="@color/greyblue"
+                    app:civ_border_width="5dp"
+                    android:src="@drawable/kb_login_profile_revise_btn"
+                    android:layout_width="105dp"
+                    android:layout_height="105dp"/>
 
             <TextView
-                    android:layout_below="@+id/one_title"
-                    android:layout_centerHorizontal="true"
-                    android:id="@+id/two_title"
-                    android:layout_marginTop="18.5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:fontFamily="@font/nanumsquareextrabold"
                     android:includeFontPadding="false"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:textSize="20sp"
-                    android:textColor="#fdbd37"
-                    android:lineSpacingExtra="3sp"
-                    android:text="설문이 도착했어요!"
+                    android:textColor="#414141"
+                    android:lineSpacingExtra="8sp"
+                    android:gravity="center_horizontal"
+                    android:text="둘무너님"
             />
 
             <TextView
-                    android:layout_below="@+id/two_title"
-                    android:layout_centerHorizontal="true"
-                    android:id="@+id/three_title"
-                    android:layout_marginTop="8dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp"
-                    android:textColor="#c7c7c7"
-                    android:lineSpacingExtra="1sp"
-                    android:fontFamily="@font/nanumsquareregular"
+                    android:textSize="20sp"
+                    android:textColor="@color/mainColor"
+                    android:lineSpacingExtra="8sp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center_horizontal"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:includeFontPadding="false"
-                    android:text="설문에 참여하면 포인트리를 얻을 수 있어요."
+                    android:text="@string/live_finish_text"
             />
 
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:textColor="#757575"
+                    android:layout_marginTop="32dp"
+                    android:fontFamily="@font/nanumsquarebold"
+                    android:includeFontPadding="false"
+                    android:lineSpacingExtra="11sp"
+                    android:gravity="center_horizontal"
+                    android:text="우승을 축하합니다. \n500 포인트리를 얻으셨습니다!"
+            />
 
             <RelativeLayout
-                    android:id="@+id/goToSurveyBtn"
+                    android:id="@+id/goToOkayBtn"
                     android:layout_below="@+id/three_title"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:layout_marginHorizontal="85dp"
-                    android:layout_marginTop="17dp"
+                    android:layout_height="46dp"
+                    android:layout_marginHorizontal="83dp"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginTop="20dp"
                     android:background="@drawable/border_show_detail_btn_background">
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="16dp"
+                        android:textSize="16sp"
                         android:textColor="#ffffff"
                         android:lineSpacingExtra="2sp"
-                        android:text="설문하기"
                         android:layout_centerInParent="true"
                         android:fontFamily="@font/nanumsquareextrabold"
                         android:includeFontPadding="false"
+                        android:text="확인"
                 />
             </RelativeLayout>
 
-
-
-
-        </RelativeLayout>
+        </LinearLayout>
     </RelativeLayout>
 
 
