--- a/app/src/main/res/layout/activity_quiz_review.xml
+++ b/app/src/main/res/layout/activity_quiz_review.xml
@@ -118,13 +118,13 @@
                     android:layout_marginTop="18dp"
                     android:id="@+id/quizReviewRvThree"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"/>
 
         </LinearLayout>
 
 
     </ScrollView>
-
 
 
 </LinearLayout>
