--- a/app/src/main/res/layout/activity_stock_and_fund.xml
+++ b/app/src/main/res/layout/activity_stock_and_fund.xml
@@ -520,12 +520,12 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="14sp"
-                                android:textColor="#e8312f"
+                                android:textColor="@color/blueColor"
                                 android:lineSpacingExtra="2sp"
                                 android:fontFamily="@font/nanumsquarebold"
                                 android:includeFontPadding="false"
                                 android:gravity="end"
-                                android:text="70,200"
+                                android:text="23,650"
                         />
 
                         <ImageView
@@ -535,7 +535,7 @@
                                 android:layout_toRightOf="@+id/research_up_text_two"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/stock_red_arrow_img"/>
+                                android:src="@drawable/stock_blue_arrow_img"/>
 
                         <TextView
                                 android:fontFamily="@font/nanumsquarebold"
@@ -545,10 +545,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="14sp"
-                                android:textColor="#e8312f"
+                                android:textColor="@color/blueColor"
                                 android:lineSpacingExtra="2sp"
                                 android:gravity="end"
-                                android:text="1500"
+                                android:text="1000"
                         />
 
 
@@ -589,7 +589,7 @@
                                 android:fontFamily="@font/nanumsquareregular"
                                 android:includeFontPadding="false"
                                 android:textSize="12sp"
-                                android:textColor="#e8312f"
+                                android:textColor="@color/blueColor"
                                 android:layout_alignParentRight="true"
                                 android:lineSpacingExtra="1sp"
                                 android:gravity="end"
@@ -889,7 +889,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="14sp"
-                                android:textColor="#e8312f"
+                                android:textColor="@color/blueColor"
                                 android:lineSpacingExtra="2sp"
                                 android:fontFamily="@font/nanumsquarebold"
                                 android:includeFontPadding="false"
@@ -904,7 +904,7 @@
                                 android:layout_toRightOf="@+id/research_up_text_five"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/stock_red_arrow_img"/>
+                                android:src="@drawable/stock_blue_arrow_img"/>
 
                         <TextView
                                 android:fontFamily="@font/nanumsquarebold"
@@ -914,7 +914,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="14sp"
-                                android:textColor="#e8312f"
+                                android:textColor="@color/blueColor"
                                 android:lineSpacingExtra="2sp"
                                 android:gravity="end"
                                 android:text="1500"
@@ -958,7 +958,7 @@
                                 android:fontFamily="@font/nanumsquareregular"
                                 android:includeFontPadding="false"
                                 android:textSize="12sp"
-                                android:textColor="#e8312f"
+                                android:textColor="@color/blueColor"
                                 android:layout_alignParentRight="true"
                                 android:lineSpacingExtra="1sp"
                                 android:gravity="end"
