--- a/app/src/main/res/layout/custom_check_dialog.xml
+++ b/app/src/main/res/layout/custom_check_dialog.xml
@@ -3,7 +3,8 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/border_sliding_layout_background">
+        android:background="@drawable/border_sliding_layout_background"
+>
 
     <ImageView
             android:id="@+id/survey_complete_icon"
@@ -13,14 +14,25 @@
             android:layout_height="wrap_content"
             android:src="@drawable/complete_v_icon"/>
 
-    <ImageView
-            android:id="@+id/survey_complete_x_button"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"
+    <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/survey_popup_x_btn"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentRight="true"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="16dp"
+    >
+        <ImageView
+                android:id="@+id/check_dialog_x_btn"
+                android:layout_margin="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/survey_popup_x_btn"
+                />
+
+
+    </RelativeLayout>
+
 
     <TextView
             android:id="@+id/survey_complete_text"
@@ -34,7 +46,7 @@
             android:textSize="20sp"
             android:textColor="#fdbd37"
             android:lineSpacingExtra="3sp"
-            android:text="설문 완료:)"
+            android:text="출석 CHECK!"
     />
 
     <TextView
@@ -49,7 +61,7 @@
             android:layout_marginTop="12dp"
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
-            android:text="설문조사가 완료되었습니다."
+            android:text="포인트리 +30P 적립 되었습니다!"
     />
 
 </RelativeLayout>
