--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="transparent">#00000000</color>
     <color name="nonCheckAnswer">#f6f6f6</color>
     <color name="redColor">#ff3232</color>
+    <color name="blueColor">#1a62d2</color>
 </resources>
