--- a/app/src/main/res/layout/activity_live.xml
+++ b/app/src/main/res/layout/activity_live.xml
@@ -34,31 +34,30 @@
 
     <android.support.v4.view.ViewPager
             android:id="@+id/live_vp"
-            android:layout_above="@+id/live_indicator"
-            android:layout_marginBottom="20dp"
+            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="200dp"/>
 
-    <app.woovictory.liiv_live.util.indicator.CircleAnimIndicator
-            android:id="@+id/live_indicator"
-            android:layout_above="@+id/live_bottom_title"
-            android:layout_width="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:layout_height="wrap_content"/>
+    <!--<app.woovictory.liiv_live.util.indicator.CircleAnimIndicator-->
+            <!--android:id="@+id/live_indicator"-->
+            <!--android:layout_above="@+id/live_bottom_title"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:layout_marginBottom="20dp"-->
+            <!--android:layout_height="wrap_content"/>-->
 
-    <TextView
-            android:id="@+id/live_bottom_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:textColor="#ffffff"
-            android:lineSpacingExtra="10sp"
-            android:fontFamily="@font/nanumsquarebold"
-            android:includeFontPadding="false"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="채팅을  보려면 왼쪽에서 오른쪽으로 밀어주세요!"
-            android:layout_marginBottom="31dp"
-    />
+    <!--<TextView-->
+            <!--android:id="@+id/live_bottom_title"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:textSize="10sp"-->
+            <!--android:textColor="#ffffff"-->
+            <!--android:lineSpacingExtra="10sp"-->
+            <!--android:fontFamily="@font/nanumsquarebold"-->
+            <!--android:includeFontPadding="false"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:text="채팅을  보려면 왼쪽에서 오른쪽으로 밀어주세요!"-->
+            <!--android:layout_marginBottom="31dp"-->
+    <!--/>-->
 </RelativeLayout>
