--- a/app/src/main/res/layout/activity_stock_and_fund.xml
+++ b/app/src/main/res/layout/activity_stock_and_fund.xml
@@ -94,7 +94,7 @@
                         android:layout_marginTop="-10dp"
                         android:layout_width="match_parent"
                         android:background="@drawable/stock_illust_img"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="200dp"/>
 
 
             </RelativeLayout>
