--- a/app/src/main/res/layout/activity_survey_complete_pop_up.xml
+++ b/app/src/main/res/layout/activity_survey_complete_pop_up.xml
@@ -9,7 +9,6 @@
         tools:context=".view.popup.SurveyCompletePopUpActivity">
 
     <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -25,14 +24,22 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/complete_v_icon"/>
 
-        <ImageView
-                android:id="@+id/exchange_complete_x_button"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
+        <RelativeLayout
+                android:id="@+id/survey_complete_x_btn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/survey_popup_x_btn"
-                android:layout_alignParentRight="true"/>
+                android:layout_alignParentRight="true"
+                android:layout_height="wrap_content">
+            <ImageView
+                    android:id="@+id/exchange_complete_x_button"
+                    android:layout_margin="16dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/survey_popup_x_btn"
+                    />
+
+        </RelativeLayout>
+
+
 
         <TextView
                 android:id="@+id/exchange_complete_text"
@@ -46,7 +53,7 @@
                 android:textSize="23sp"
                 android:textColor="#fdbd37"
                 android:lineSpacingExtra="3sp"
-                android:text="보내기 완료!"
+                android:text="설문 완료:)"
         />
 
         <TextView
@@ -61,7 +68,7 @@
                 android:layout_marginTop="15dp"
                 android:fontFamily="@font/nanumsquareregular"
                 android:includeFontPadding="false"
-                android:text="계좌에 포인트리 보내기를 완료하였습니다."
+                android:text="설문조사가 완료되었습니다."
         />
 
     </RelativeLayout>
