--- a/app/src/main/res/layout/fragment_home_step_two.xml
+++ b/app/src/main/res/layout/fragment_home_step_two.xml
@@ -100,13 +100,13 @@
 
             <TextView
                     android:layout_gravity="left"
-                    android:layout_marginTop="1dp"
+                    android:layout_marginTop="4dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp"
                     android:textColor="#707070"
                     android:lineSpacingExtra="2sp"
-                    android:fontFamily="@font/nanumsquarebold"
+                    android:fontFamily="@font/nanumsquareextrabold"
                     android:includeFontPadding="false"
                     android:text="아직 초보자"
             />
