add image files , modify code

--- a/app/src/main/res/layout/activity_quiz_answer.xml
+++ b/app/src/main/res/layout/activity_quiz_answer.xml
@@ -177,7 +177,7 @@
     <RelativeLayout
 
             android:layout_above="@+id/quiz_answer_layout"
-            android:id="@+id/circle_layout"
+            android:id="@+id/circle_answer_layout"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_centerHorizontal="true"
