--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -50,6 +50,7 @@
 
 
     <RelativeLayout
+            android:background="@android:color/white"
             android:layout_marginTop="36dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -75,6 +76,7 @@
                     android:orientation="horizontal">
 
                 <TextView
+                        android:id="@+id/check_nickname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="19sp"
@@ -143,7 +145,7 @@
                 android:layout_marginLeft="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/attendance_today_icon"
+                android:src="@drawable/attendance_attendance_icon"
         />
 
         <TextView
