--- a/app/src/main/res/layout/item_coupon_coffee.xml
+++ b/app/src/main/res/layout/item_coupon_coffee.xml
@@ -3,15 +3,15 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/border_sliding_layout_background">
+        android:background="@drawable/border_non_layout">
 
     <ImageView
             android:id="@+id/coffee_image_item"
-            android:layout_width="130dp"
+            android:layout_width="wrap_content"
             android:src="@drawable/lotte_pepero"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="11dp"
-            android:layout_height="130dp"
+            android:layout_height="wrap_content"
     />
 
     <View
