--- a/app/src/main/res/layout/sliding_layout.xml
+++ b/app/src/main/res/layout/sliding_layout.xml
@@ -5,7 +5,6 @@
         android:background="#00000000"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         android:orientation="vertical">
 
 
@@ -13,7 +12,7 @@
     android:layout_marginHorizontal="16dp" 추가하면됨.
     -->
     <LinearLayout
-            android:layout_marginHorizontal="16dp"
+
             android:id="@+id/sliding_tops"
             android:elevation="1dp"
             android:background="@drawable/border_sliding_background"
@@ -691,6 +690,7 @@
 
 
                     <RelativeLayout
+                            android:id="@+id/goToDetailStockBtn"
                             android:layout_marginTop="25dp"
                             android:background="@drawable/border_show_detail_btn_background"
                             android:layout_marginHorizontal="64dp"
