view 작은 에러들 수정함.

--- a/app/src/main/res/layout/fragment_coupon_home.xml
+++ b/app/src/main/res/layout/fragment_coupon_home.xml
@@ -101,8 +101,7 @@
 
                 <ImageView
                         android:background="@drawable/couponshop_coffee_img"
-                        android:layout_width="wrap_content"
-
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
                 <LinearLayout
@@ -164,8 +163,8 @@
 
                 <ImageView
                         android:background="@drawable/couponshop_hamburger_img"
-                        android:layout_width="wrap_content"
-                        android:layout_height="160dp"/>
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
 
                 <LinearLayout
                         android:layout_marginTop="20dp"
