--- a/app/src/main/res/layout/activity_check.xml
+++ b/app/src/main/res/layout/activity_check.xml
@@ -167,7 +167,8 @@
     <ImageView
             android:id="@+id/check_calendar_image"
             android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_height="wrap_content"
             android:src="@drawable/calendar"/>
 
