--- a/app/src/main/res/layout/activity_pointree_history.xml
+++ b/app/src/main/res/layout/activity_pointree_history.xml
@@ -22,6 +22,7 @@
 
             <ImageView
                     android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:src="@drawable/navi_left_arrow_btn"
