--- a/app/src/main/res/layout/sliding_layout.xml
+++ b/app/src/main/res/layout/sliding_layout.xml
@@ -208,6 +208,7 @@
                         />
 
                         <TextView
+                                android:id="@+id/mypage_ponitree"
                                 android:layout_alignParentRight="true"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
