외부 앱 접근하기 해결 - 마블 앱으로 연결 네비게이션 바 이름 참조할 때 NPE 발생하는 문제 해결 홈 슬라이드 이미지 간격 해결

--- a/app/src/main/res/layout/activity_stock_and_fund.xml
+++ b/app/src/main/res/layout/activity_stock_and_fund.xml
@@ -868,6 +868,7 @@
                     android:background="@color/viewColor"/>
 
             <ImageView
+                    android:id="@+id/goStockStartBtn"
                     android:layout_marginTop="31dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
