--- a/app/src/main/res/layout/sliding_layout.xml
+++ b/app/src/main/res/layout/sliding_layout.xml
@@ -547,12 +547,13 @@
                             android:layout_marginTop="18dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
                             android:orientation="horizontal">
 
 
                         <LinearLayout
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
+
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
                                 android:layout_gravity="center_horizontal"
@@ -562,8 +563,8 @@
                             <ImageView
                                     android:id="@+id/eight_iv"
                                     android:layout_gravity="center_horizontal"
-                                    android:layout_width="88dp"
-                                    android:layout_height="114dp"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
                                     android:src="@drawable/home_slide_stock_kb"/>
 
                             <LinearLayout
@@ -571,7 +572,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
-                            android:layout_gravity="center_horizontal">
+                                    android:layout_gravity="center_horizontal">
                                 <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
@@ -602,8 +603,9 @@
 
 
                         <LinearLayout
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
+                                android:layout_marginLeft="5dp"
+                                android:layout_marginRight="5dp"
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
                                 android:layout_gravity="center_horizontal"
@@ -613,9 +615,9 @@
                             <ImageView
                                     android:id="@+id/nine_iv"
                                     android:layout_gravity="center_horizontal"
-                                    android:layout_width="88dp"
-                                    android:layout_height="114dp"
-                            android:src="@drawable/home_slide_stock_seoul_auction"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:src="@drawable/home_slide_stock_seoul_auction"
                             />
 
                             <LinearLayout
@@ -656,16 +658,16 @@
                         <LinearLayout
                                 android:layout_gravity="center_horizontal"
                                 android:gravity="center_horizontal"
-                                android:layout_weight="1"
-                                android:layout_width="0dp"
+
+                                android:layout_width="100dp"
                                 android:layout_height="wrap_content"
                                 android:orientation="vertical"
                         >
 
                             <ImageView
                                     android:id="@+id/ten_iv"
-                                    android:layout_width="88dp"
-                                    android:layout_height="114dp"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
                                     android:src="@drawable/home_slide_stock_google"/>
 
                             <LinearLayout
