--- a/app/src/main/res/layout/sliding_layout.xml
+++ b/app/src/main/res/layout/sliding_layout.xml
@@ -23,7 +23,7 @@
         <RelativeLayout
                 android:id="@+id/slide_up_btn"
                 android:layout_gravity="center_horizontal"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             <ImageView
                     android:layout_margin="10dp"
