--- a/app/src/main/res/layout/activity_live_finish_pop_up.xml
+++ b/app/src/main/res/layout/activity_live_finish_pop_up.xml
@@ -11,7 +11,8 @@
     <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp">
+            android:layout_marginTop="70dp"
+    android:layout_centerInParent="true">
 
         <RelativeLayout
                 android:id="@+id/dialog_icons"
@@ -69,6 +70,7 @@
                     android:layout_height="105dp"/>
 
             <TextView
+                    android:id="@+id/live_finish_usr_tv"
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/nanumsquareextrabold"
                     android:includeFontPadding="false"
